Implement school management feature updates